devops/ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redcert
  annotations:
#    nginx.ingress.kubernetes.io/redirect-regex: ^/(.*)
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - 4arturas.pagekite.me
      secretName: echo-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: web
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: api
