devops/k3s-traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dash-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.localhost`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dash-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.localhost`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
